fix: use deno run explicitly for embed-packages.ts in CI
The shebang doesn't work reliably on all GitHub Actions runners.
Changed from ./scripts/embed-packages.ts to explicit deno run command.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
           deno-version: v1.x
 
       - name: Embed HQL packages
-        run: ./scripts/embed-packages.ts
+        run: deno run --allow-read --allow-write scripts/embed-packages.ts
 
       - name: Build binary
         run: |
