fix: add missing source files that were ignored by .gitignore
The .gitignore pattern 'hql-*' was too broad and caught source files
like hql-plugin.ts, hql-transpiler.ts, hql-runtime.ts, etc.

Changes:
- Fixed .gitignore to only ignore binaries in root (/hql-*)
- Added 5 critical source files that were missing from repo:
  * src/transpiler/hql-transpiler.ts
  * src/cli/hql-plugin.ts
  * src/common/hql-cache-tracker.ts
  * src/runtime/hql-runtime.ts
  * src/transpiler/pipeline/hql-ast-to-hql-ir.ts

This was causing CI build failures with:
'Module not found src/transpiler/hql-transpiler.ts'

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Build outputs
 dist/
 
-# HQL compiled binaries
-hql
-hql-*
+# HQL compiled binaries (only in root, not source files in subdirs)
+/hql
+/hql-*
 
 # Generated files
 *.js
