fix: add missing stdlib JS files (8 files, 220KB)
Root cause: .gitignore pattern *.js was blocking src/lib/stdlib/**/*.js files

Added files:
- src/lib/stdlib/stdlib.js (154KB)
- src/lib/stdlib/js/stdlib.js
- src/lib/stdlib/js/core.js (57KB)
- src/lib/stdlib/js/index.js
- src/lib/stdlib/js/internal/lazy-seq.js
- src/lib/stdlib/js/internal/normalize.js
- src/lib/stdlib/js/internal/range-core.js
- src/lib/stdlib/js/internal/validators.js

Fixed .gitignore by adding exception: !src/lib/**/*.js

This resolves build #4 failure where GitHub Actions couldn't find stdlib.js

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ dist/
 !core/**/*.js
 !test/**/*.js
 !packages/**/*.js  # Allow .js files in stdlib packages (if any)
+!src/lib/**/*.js  # Allow stdlib JS files
 
 # Deno cache
 .deno/
