fix: force bash shell for deno compile on all platforms including Windows
Root cause: Windows PowerShell doesn't support backslash (\) line continuation
PowerShell uses backtick (`) but bash uses backslash (\)

Added 'shell: bash' to Build binary step to ensure consistent behavior across platforms.

This resolves the Windows build parser error in Release #6

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,6 +48,7 @@ jobs:
         run: deno run --allow-read --allow-write scripts/embed-packages.ts
 
       - name: Build binary
+        shell: bash
         run: |
           deno compile \
             --allow-all \
