feat(type): hql type (WIP)

--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "imports": {
     "source-map": "npm:source-map@0.6.1",
+    "typescript": "npm:typescript@5.3.3",
     "@hlvm/repl": "../repl/mod.ts"
   },
   "publish": {
