--- a/deno.json
+++ b/deno.json
@@ -44,6 +44,8 @@
     "test:all:binary": "deno task test:unit && deno task test:binary && HQL_TEST_BINARY=1 deno task test:compat",
     "test:watch": "deno test --allow-all --watch tests/unit/**/*.test.ts",
     "test:ultimate": "echo '🚀 Running Ultimate HQL Test Suite' && deno task test:unit && deno task test:binary && deno task test:compat && deno task test:e2e && echo '✅ All tests passed!'",
-    "test:ultimate:quick": "echo '🚀 Running Quick Ultimate Test Suite' && deno task test:unit && deno task test:binary:quick && deno task test:e2e && echo '✅ All tests passed!'"
+    "test:ultimate:quick": "echo '🚀 Running Quick Ultimate Test Suite' && deno task test:unit && deno task test:binary:quick && deno task test:e2e && echo '✅ All tests passed!'",
+    "scrape-models": "deno run --allow-net --allow-write --allow-read --allow-env scripts/scrape-ollama-models.ts",
+    "scrape-models:sync": "deno run --allow-net --allow-write --allow-read --allow-env scripts/scrape-ollama-models.ts --sync"
   }
 }
