--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ Thumbs.db
 # Claude Code
 .claude/settings.local.json
 
+# Serena MCP (AI assistant tool-specific)
+.serena/
+
 # Logs
 *.log
 verify-output.log
